# dkg-substrate

./: .dockerignore  .gitignore  .gitmodules  .licenserc.yaml  Cargo.toml  LICENSE  Makefile.toml  README.md  codecov.yml  crates.js  e2e_tests.sh  flake.nix  help.html  index.html  keys.sh  prometheus.yml  rust-toolchain.toml  search-index.js  settings.html  src-files.js
dkg-gadget/: Cargo.toml  keygen-manager.md  meta_handler.md  signing-manager-v2.md  signing-manager.md
dkg-gadget/src/: async_protocol_handlers.rs  blame_manager.rs  constants.rs  debug_logger.rs  error.rs  gossip.rs  keyring.rs  keystore.rs  lib.rs  meta_async_protocol.rs  metrics.rs  non_dkg_message.rs  persistence.rs  proposal.rs  testing.rs  types.rs  utils.rs  worker.rs
dkg-gadget/src/async_protocols/: blockchain_interface.rs  dkg.rs  incoming.rs  misbehaviour_monitor.rs  mod.rs  remote.rs  state_machine.rs  state_machine_wrapper.rs  test_utils.rs  types.rs
dkg-gadget/src/async_protocols/frost/: mod.rs
dkg-gadget/src/async_protocols/keygen/: handler.rs  state_machine.rs
dkg-gadget/src/async_protocols/sign/: handler.rs  state_machine.rs
dkg-gadget/src/db/: mem.rs  mod.rs  offchain_storage.rs  sql_storage.rs
dkg-gadget/src/dkg_modules/: mod.rs  mp_ecdsa.rs  wt_frost.rs  wt_frost_wsts.rs
dkg-gadget/src/gossip_engine/: mod.rs  network.rs
dkg-gadget/src/gossip_messages/: dkg_message.rs  misbehaviour_report.rs  mod.rs  proposer_vote_gossip.rs  public_key_gossip.rs
dkg-gadget/src/keygen_manager/: mod.rs
dkg-gadget/src/messages/: dkg_message.rs  misbehaviour_report.rs  mod.rs  public_key_gossip.rs
dkg-gadget/src/meta_async_rounds/: blockchain_interface.rs  incoming.rs  meta_handler.rs  misbehaviour_monitor.rs  mod.rs  remote.rs  shared_state_machine.rs  state_machine_interface.rs  state_machine_wrapper.rs
dkg-gadget/src/meta_async_rounds/dkg_gossip_engine/: mock.rs  mod.rs  network.rs
dkg-gadget/src/signing_manager/: dkg_signing_manager.rs  mod.rs  work_manager.rs
dkg-gadget/src/storage/: clear.rs  misbehaviour_reports.rs  mod.rs  proposals.rs  proposer_votes.rs  public_keys.rs
dkg-gadget/src/wsts_proto/: mod.rs
dkg-gossip/: Cargo.toml  README.md
dkg-gossip/src/: gossip.rs  lib.rs  transactions.rs
dkg-integration-tests/: Cargo.toml
dkg-integration-tests/src/: main.rs
dkg-logging/: Cargo.toml
dkg-logging/src/: debug_logger.rs  lib.rs
dkg-mock-blockchain/: Cargo.toml
dkg-mock-blockchain/src/: data_types.rs  lib.rs  main.rs  mock_blockchain_config.rs  server.rs  transport.rs
dkg-primitives/: Cargo.toml
dkg-primitives/src/: dkg_key_cli.rs  keys.rs  lib.rs  rounds.rs  traits.rs  types.rs  utils.rs
dkg-primitives/src/rounds/: dkg.rs  keygen.rs  mod.rs  offline.rs  rounds.rs  sign.rs
dkg-runtime/: Cargo.toml
dkg-runtime-primitives/: Cargo.toml
dkg-runtime-primitives/src/: bridge_registry.rs  ethereum_abi.rs  gossip_messages.rs  lib.rs  mmr.rs  nonce.rs  proposal.rs  traits.rs  utils.rs
dkg-runtime-primitives/src/handlers/: decode_proposals.rs  mod.rs  proposer_set_update.rs  validate_proposals.rs
dkg-runtime-primitives/src/handlers/evm/: add_token_to_set.rs  anchor_update.rs  bytes32_update.rs  evm_tx.rs  fee_recipient_update.rs  fee_update.rs  max_deposit_limit_update.rs  min_withdrawal_limit_update.rs  mod.rs  refresh.rs  remove_token_from_set.rs  rescue_tokens.rs  resource_id_update.rs  set_treasury_handler.rs  set_verifier.rs
dkg-runtime-primitives/src/handlers/substrate/: add_token_to_pool_share.rs  anchor_create.rs  anchor_update.rs  fee_update.rs  mod.rs  remove_token_from_pool_share.rs  (+1 more)
dkg-runtime-primitives/src/offchain/: crypto.rs  mod.rs  storage_keys.rs
dkg-runtime/src/: lib.rs
dkg-test-orchestrator/: Cargo.toml  README.md
dkg-test-orchestrator/config/: test_n3t2.toml
dkg-test-orchestrator/src/: client.rs  dummy_api.rs  in_memory_gossip_engine.rs  main.rs
node/: Cargo.toml  build.rs
node/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  main.rs  service.rs
pallets/block-header-registry/: Cargo.toml
pallets/block-header-registry/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/bridge-registry/: Cargo.toml
pallets/bridge-registry/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/dkg-metadata/: Cargo.toml  README.md
pallets/dkg-metadata/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/dkg-mmr/: Cargo.toml
pallets/dkg-mmr/primitives/: Cargo.toml
pallets/dkg-mmr/src/: lib.rs  mock.rs  tests.rs
pallets/dkg-proposal-handler/: Cargo.toml  README.md
pallets/dkg-proposal-handler/rpc/: Cargo.toml
pallets/dkg-proposal-handler/src/: benchmarking.rs  functions.rs  impls.rs  lib.rs  mock.rs  offences.rs  tests.rs  weights.rs
pallets/dkg-proposals/: Cargo.toml  README.md
pallets/dkg-proposals/rpc/: Cargo.toml
pallets/dkg-proposals/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  utils.rs  weights.rs
pallets/light-proposals/: Cargo.toml
pallets/light-proposals/eth-types/: Cargo.toml
pallets/light-proposals/src/: evm_utils.rs  lib.rs  traits.rs  types.rs
pallets/parachain-staking/: Cargo.toml
pallets/parachain-staking/src/: benchmarks.rs  inflation.rs  lib.rs  mock.rs  set.rs  tests.rs  weights.rs
parachain/node/: Cargo.toml  build.rs
parachain/node/src/: cli.rs  command.rs  lib.rs  main.rs  rpc.rs  service.rs
parachain/runtime/rococo/: Cargo.toml
primitives/: Cargo.toml
primitives/src/: lib.rs  proposal.rs
relayer-gadget/: Cargo.toml
relayer-gadget/cli/: Cargo.toml
relayer-gadget/cli/src/: lib.rs
relayer-gadget/config/: README.md  simple.toml
relayer-gadget/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  xcm_config.rs
standalone/node/: Cargo.toml  build.rs  metadata.scale
standalone/node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  command_helper.rs  dkg_key.rs  lib.rs  main.rs  rpc.rs  service.rs  testnet_fixtures.rs
standalone/node/tests/: common.rs  dkg_key_refresh.rs
standalone/runtime/: Cargo.toml  build.rs
standalone/runtime/src/: constants.rs  lib.rs
types/: LICENSE  (+4 more)
(+1910 files in other folders)
