[workspace.package]
description = "A fresh FRAME-based Substrate runtime, ready for hacking."
authors = ["Webb tools"]
license = "Unlicense"
publish = false
homepage = "https://webb.tools/"
repository = "https://github.com/webb-tools/dkg-substrate"
edition = "2021"

[workspace]
members = [
	'pallets/*',
	'parachain/node',
	'parachain/runtime/rococo',
	'standalone/*',
	'dkg-primitives',
	'dkg-runtime-primitives',
	'dkg-gadget',
	'dkg-logging'
]

[profile.release]
panic = 'unwind'
