[package]
name = "dkg-gadget"
version = "0.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[features]
outbound-inspection = []
debug-tracing = ["tracing"]
testing = ["parking_lot/deadlock_detection"]

[dependencies]
futures = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
strum = { workspace = true }
linked-hash-map = { workspace = true }
scale-info = { workspace = true }
curv = { workspace = true }

codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
prometheus = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }

sp-api = { workspace = true }
sp-application-crypto = { workspace = true }
sp-consensus = { workspace = true }
sp-arithmetic = { workspace = true }
sp-blockchain = { workspace = true }
sp-core = { workspace = true }
sp-keystore = { workspace = true }
sp-runtime = { workspace = true }

uuid = { workspace = true }
bincode2 = { workspace = true }

sc-client-api = { workspace = true }
sc-keystore = { workspace = true }
sc-network = { workspace = true }
sc-network-common = { workspace = true }
sc-peerset = { workspace = true }

round-based = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
multi-party-ecdsa = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
atomic = { workspace = true }
async-trait = { workspace = true }
auto_impl = { workspace = true }
itertools = { workspace = true }
sync_wrapper = { workspace = true }
async-stream = { workspace = true }
lazy_static = { workspace = true }

hash-db = { workspace = true, optional = true }
webb-proposals = { workspace = true }

# Local dependencies
dkg-runtime-primitives = { workspace = true }
dkg-primitives = { workspace = true }
dkg-logging = { workspace = true }
dkg-mock-blockchain = { workspace = true }

tracing = { workspace = true, optional = true }

[dev-dependencies]
sc-network-test = { workspace = true }
rstest = { workspace = true }
env_logger = { workspace = true }
