[package]
name = "dkg-gossip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sc-network = { path = "../../tmp/substrate/substrate/client/network", default-features = false }
codec = { package = "parity-scale-codec", version = "2.0.0", features = [
	"derive",
] }
futures = "0.3.9"
libp2p = { version = "0.40.0", default-features = false }
log = "0.4.8"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.10.0-dev", path = "../../tmp/substrate/substrate/utils/prometheus" }

sp-runtime = { version = "5.0.0", path = "../../tmp/substrate/substrate/primitives/runtime" }
pin-project = "1.0.10"
sc-peerset = { version = "4.0.0-dev", path = "../../tmp/substrate/substrate/client/peerset" }
