[package]
name = "dkg-gossip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
codec = { package = "parity-scale-codec", version = "2.0.0", features = [
	"derive",
] }

futures-timer = "3.0.2"
linked_hash_set = "0.1.3"
lru = "0.7.0"

futures = "0.3.9"
libp2p = { version = "0.40.0", default-features = false }
log = "0.4.8"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }

sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
pin-project = "1.0.10"
sc-peerset = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
