[package]
name = "dkg-integration-tests"
version = "0.1.0"
description.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["full"] }
dkg-logging = { workspace = true, default-features = false }
dkg-standalone-runtime = { workspace = true }
substrate-api-client = { workspace = true, features = ["std"] }
ac-primitives = { workspace = true }
tokio-websockets = { workspace = true }
