[package]
name = "dkg-logging"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "Webb Developers <drew@webb.tools>"]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-filter = "0.1.0-alpha.2"