[package]
name = "dkg-logging"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "Webb Developers <drew@webb.tools>"]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["full"]
full = ["parking_lot", "serde", "sp-core", "lazy_static", "tokio", "serde_json", "hex"]

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-filter = "0.1.0-alpha.2"
parking_lot = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
sp-core = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
