[package]
name = "dkg-mock-blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["net"] }
tokio-util = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
futures = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }