[package]
name = "dkg-mock-blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["net", "rt-multi-thread", "fs"] }
tokio-util = { workspace = true }
toml = { workspace = true, features = ["parse"] }
humantime-serde = { workspace = true }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["v4", "serde"] }
futures = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
sc-client-api = { workspace = true }
atomic = { workspace = true }
bincode2 = { workspace = true }
sp-runtime = { workspace = true }
sp-consensus = { workspace = true }
sc-network = { workspace = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }