[package]
name = "dkg-primitives"
version = "0.0.1"
edition = "2021"

[dependencies]
fnv = "1.0.6"
futures = "0.3"
log = "0.4"
parking_lot = "0.11"
thiserror = "1.0"
wasm-timer = "0.2.5"
libsecp256k1 = "0.3.5"
sha3 = "0.9"
hex = "0.4"
serde_json = "1.0"

codec = { version = "2.0.0", package = "parity-scale-codec", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.4"
getrandom = { version = "0.2.4", features = ["js"] }
chacha20poly1305 = "0.9.0"
typed-builder = "0.9.1"

curv = { package = "curv-kzen", version = "0.9", default-features = false }

round-based = { version = "0.1.4", features = [] }
multi-party-ecdsa = { git = "https://github.com/webb-tools/multi-party-ecdsa.git" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
dkg-runtime-primitives = { path = "../dkg-runtime-primitives" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

[features]
