[package]
name = "dkg-primitives"
version = "0.0.1"
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }

[dependencies]
log = { workspace = true }
libsecp256k1 = { workspace = true }
sha3 = "0.9"
hex = { workspace = true }
serde_json = { workspace = true }

codec = { version = "3", package = "parity-scale-codec", features = ["derive"] }
rand = { workspace = true }
chacha20poly1305 = "0.9.0"
clap = { workspace = true }
curv = { workspace = true }

multi-party-ecdsa = { workspace = true }
sp-core = { workspace = true }
sc-service = { workspace = true }
sp-runtime = { workspace = true }
sp-keystore = { workspace = true }
dkg-runtime-primitives = { workspace = true }
sc-cli = { workspace = true }

[dev-dependencies]
sp-keyring = { workspace = true }
