[package]
name = "dkg-runtime-primitives"
version = "0.0.1"
edition = "2021"

[dependencies]
impl-trait-for-tuples = { version = "0.2.2", default-features = false }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = [
	"derive",
] }
tiny-keccak = { version = "2.0.1", default-features = false, features = [
	"keccak",
] }
ethereum = { version = "0.14.0", default-features = false, features = [
	"with-codec",
] }
ethereum-types = { version = "0.14.1", default-features = false }
webb-proposals = { version = "0.5.4", default-features = false, features = ["scale", "evm", "substrate"] }
num-traits = { version = "0.2.8", default-features = false }
hex = { version = "0.4", default-features = false }
serde = { version = "1.0.103", default-features = false, features = ["derive"], optional = true}
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.36', default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"hex/std",
	"serde",
	"scale-info/std",
	"webb-proposals/std",
	"sp-io/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-core/std",
	"sp-application-crypto/std",
	"frame-system/std",
	"frame-support/std",
	"webb-proposals/std",
]
